# AlgoDojo

./: .dockerignore  .gitignore  README.md  design.md  hot100.md  requirements.md  tasks.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 95136b762943_add_submission_detail.py  e692ef8d14c2_add_knowledge_tips_to_problems.py  e77de128c045_add_user_hint_unlocks.py  ee821ced8334_initial_schema.py  fc8599d9d77c_add_submission_sample_only.py
backend/app/: __init__.py  config.py  constants.py  db.py  main.py  redis_client.py
backend/app/auth/: __init__.py  deps.py  github.py  jwt.py  router.py  service.py
backend/app/learning/: __init__.py  hints.py  patterns.py  roadmap.py  router.py  schemas.py
backend/app/models/: __init__.py  learning.py  problem.py  submission.py  user.py
backend/app/problems/: __init__.py  router.py  schemas.py  service.py
backend/app/progress/: __init__.py  router.py  schemas.py  service.py
backend/app/seed/: __init__.py  curated.py  generate.py  hot100.py  loader.py
backend/app/submissions/: __init__.py  queue.py  router.py  schemas.py  service.py  worker.py
backend/seed/: README.md  problems.yaml
backend/tests/: conftest.py  test_auth.py  test_health.py  test_learning.py  test_parse_hot100.py  test_problems_progress.py  test_security.py  test_seed_loader.py  test_submissions_api.py  test_worker.py  test_worker_integration.py
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml
frontend/: .eslintrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/api/: client.ts
frontend/src/auth/: storage.ts
frontend/src/components/: Header.tsx  RequireAuth.tsx
frontend/src/lib/: draftStore.test.ts  draftStore.ts
frontend/src/pages/: AuthCallbackPage.tsx  LoginPage.tsx  PatternsPage.tsx  ProblemListPage.tsx  ProblemPage.tsx  RoadmapPage.tsx
judge/: .dockerignore  Dockerfile  README.md  pyproject.toml
judge/dojo_judge/: __init__.py  adapters.py  compare.py  engine.py  runner.py  types.py
judge/tests/: test_adapters.py  test_compare.py  test_engine_integration.py  test_runner.py
